[package]
name = "invoice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# sheets4 = { version = "2.0.8", package = "google-sheets4" }
# oauth2 = { version = "6.2.0", package = "yup-oauth2" }
# google-drive = "0.2.4"
# sheets = "0.2.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
hyper = "0.14.16"
hyper-rustls = "0.23.0"
reqwest = { version = "0.11.9", features = ["json", "gzip"] }
tokio = { version = "1.16.1", features = ["full"] }
url = "2.2.2"
