[package]
name = "invoice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
reqwest = { version = "0.11.9", features = ["json", "gzip"] }
tokio = { version = "1.16.1", features = ["full"] }
url = "2.2.2"
time = { version = "0.3.7", features = ["formatting", "macros"] }
base64 = "0.13.0"
